# result

./: .gitignore  CMakeLists.txt  LICENSE  README.md  result.h  result_test.cpp
